# NewRedditBackend/src/main/java/hu/elte/NewReddit/controller/SubredditController.java
@@ -5,15 +5,20 @@
  */
 package hu.elte.NewReddit.controller;
 
+import hu.elte.NewReddit.model.ApiResponse;
 import hu.elte.NewReddit.model.Subreddit;
 import hu.elte.NewReddit.repository.SubredditRepository;
+import java.util.Date;
 import java.util.Optional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.bind.annotation.RequestMapping;
 
@@ -42,4 +47,34 @@ public class SubredditController {
 		}
 		return new ResponseEntity(null, HttpStatus.NOT_FOUND);
 	}
+
+	@PostMapping("")
+	public ResponseEntity<ApiResponse> createNewSubreddit(@RequestBody Subreddit reqSubreddit) {
+
+		String date = new Date(System.currentTimeMillis()).toString();
+
+		Optional<Subreddit> subreddit = subredditRepository.findByName(reqSubreddit.getName());
+
+		if (subreddit.isPresent()) {
+			return new ResponseEntity(new ApiResponse(418, "Subreddit with this name already exists", date), HttpStatus.I_AM_A_TEAPOT);
+		}
+		subredditRepository.save(reqSubreddit);
+		return new ResponseEntity(new ApiResponse(200, "Subreddit successfully created", date), HttpStatus.OK);
+	}
+
+	@DeleteMapping("/{subredditId}")
+	public ResponseEntity<ApiResponse> deleteSubredditById(@PathVariable Long subredditId) {
+
+		String date = new Date(System.currentTimeMillis()).toString();
+
+		Optional<Subreddit> subreddit = subredditRepository.findById(subredditId);
+
+		if (subreddit.isPresent()) {
+			subredditRepository.delete(subreddit.get());
+			return new ResponseEntity<>(new ApiResponse(200, "Subreddit successfully removed", date), HttpStatus.OK);
+		}
+
+		return new ResponseEntity<>(new ApiResponse(404, "Subreddit not found", date), HttpStatus.NOT_FOUND);
+	}
+
 }
